k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
